# notes-relevant-search

./: RelevantSearch.md  pyproject.toml
Jupyter/: Chapter 3: Solving your first relevance problem.ipynb  Chapter 4: Taming tokens.ipynb  Readme.md  my_utils.py  pyproject.toml
Jupyter/.ipynb_checkpoints/: Chapter 3: Solving your first relevance problem-checkpoint.ipynb  Chapter 4: Taming tokens-checkpoint  Chapter 4: Taming tokens-checkpoint.ipynb  my_utils-checkpoint.py
