[tool.poetry]
name = "notes-relevant-search"
version = "0.1.0"
description = ""
authors = ["Sonja Heins <sonja.heins@hse.com>"]
readme = "README.md"
packages = [{include = "notes_relevant_search"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

